--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -3,7 +3,7 @@ substitutions:
   name: "aquapi"
   friendly_name: "AquaPi"
   # App Version - Updated: 8/2023
-  app_version: "1.3"
+  app_version: "1.3.1"
   # Import Config
   import_config: "false"
   # Logger Level
@@ -710,7 +710,7 @@ button:
   # Output Salinity
   - platform: template
     name: "EC - Output - Salinity"
-    id: ec_sal
+    id: ec_all
     on_press:
       then:
         - lambda: |-
