--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -139,7 +139,7 @@ sensor:
 
   # Wifi Signal 
   - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
-    name: "WiFi Signal dB"
+    # name: "WiFi Signal dB"
     id: wifi_signal_db
     entity_category: "diagnostic"
 
