--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -101,7 +101,7 @@ wifi:
 
 captive_portal:
 
-web_server:
+# web_server:
 
 # Sets up Bluetooth LE (Only on ESP32) to allow the user to provision wifi credentials to the device.
 esp32_improv:
