--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -78,6 +78,8 @@ esphome:
     then:
       - component.update: water_level
       - button.press: read_ec
+      - button.press: send_selected_ec
+      - button.press: send_selected_ph
 
 esp32:
   board: esp32dev
@@ -127,6 +129,12 @@ light:
 dallas:
   - pin: ${dallasPin}
     update_interval: "${update_temp}"
+
+interval:
+  # Update Raw EC
+  - interval: "${update_ec}"
+    then:
+      - button.press: read_ec
     
 sensor:
   # Internal Magnetic Sensor
@@ -272,7 +280,7 @@ sensor:
   - platform: template
     name: TDS
     id: sensor_tds
-    unit_of_measurement: "mg/l"
+    unit_of_measurement: "mg/L"
     icon: mdi:water-opacity
     accuracy_decimals: 0
     update_interval: "${update_ec}"
@@ -716,49 +724,49 @@ button:
     name: "Shutdown"
     disabled_by_default: true
 
-  # EC
-  # Output Parameters
-  # Output Salinity
-  - platform: template
-    name: "EC - Output - Salinity"
-    id: ec_sal
-    on_press:
-      then:
-        - lambda: |-
-            id(ec_ezo).send_custom("O,EC,0");
-            id(ec_ezo).send_custom("O,TDS,0");
-            id(ec_ezo).send_custom("O,S,1");
-            id(ec_ezo).send_custom("O,SG,0");
-    entity_category: "Config"
-    disabled_by_default: true
+  # # EC
+  # # Output Parameters
+  # # Output Salinity
+  # - platform: template
+  #   name: "EC - Output - Salinity"
+  #   id: ec_sal
+  #   on_press:
+  #     then:
+  #       - lambda: |-
+  #           id(ec_ezo).send_custom("O,EC,0");
+  #           id(ec_ezo).send_custom("O,TDS,0");
+  #           id(ec_ezo).send_custom("O,S,1");
+  #           id(ec_ezo).send_custom("O,SG,0");
+  #   entity_category: "Config"
+  #   disabled_by_default: true
             
-  # Output Specific Gravity
-  - platform: template
-    name: "EC - Output - Specific Gravity"
-    id: ec_sg
-    on_press:
-      then:
-        - lambda: |-
-            id(ec_ezo).send_custom("O,EC,0");
-            id(ec_ezo).send_custom("O,TDS,0");
-            id(ec_ezo).send_custom("O,S,0");
-            id(ec_ezo).send_custom("O,SG,1");
-    entity_category: "Config"
-    disabled_by_default: true
+  # # Output Specific Gravity
+  # - platform: template
+  #   name: "EC - Output - Specific Gravity"
+  #   id: ec_sg
+  #   on_press:
+  #     then:
+  #       - lambda: |-
+  #           id(ec_ezo).send_custom("O,EC,0");
+  #           id(ec_ezo).send_custom("O,TDS,0");
+  #           id(ec_ezo).send_custom("O,S,0");
+  #           id(ec_ezo).send_custom("O,SG,1");
+  #   entity_category: "Config"
+  #   disabled_by_default: true
 
-  # Output Conductivity
-  - platform: template
-    name: "EC - Output - Conductivity"
-    id: ec_cond
-    on_press:
-      then:
-        - lambda: |-
-            id(ec_ezo).send_custom("O,EC,1");
-            id(ec_ezo).send_custom("O,TDS,0");
-            id(ec_ezo).send_custom("O,S,0");
-            id(ec_ezo).send_custom("O,SG,0");
-    entity_category: "Config"
-    disabled_by_default: true
+  # # Output Conductivity
+  # - platform: template
+  #   name: "EC - Output - Conductivity"
+  #   id: ec_cond
+  #   on_press:
+  #     then:
+  #       - lambda: |-
+  #           id(ec_ezo).send_custom("O,EC,1");
+  #           id(ec_ezo).send_custom("O,TDS,0");
+  #           id(ec_ezo).send_custom("O,S,0");
+  #           id(ec_ezo).send_custom("O,SG,0");
+  #   entity_category: "Config"
+  #   disabled_by_default: true
 
   # Read pH Probe
   - platform: template
