--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -717,7 +717,7 @@ button:
   - platform: safe_mode
     name: "Restart in Safe Mode"
     id: restart_safe
-    disabled_by_default: false
+    disabled_by_default: true
 
   # Shutdown
   - platform: shutdown
