--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -2,7 +2,7 @@ esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  # name_add_mac_suffix: true
+  name_add_mac_suffix: true
   comment: "${comment}"
 
 esp32:
