--- a/common/ezo_co2.yaml
+++ b/common/ezo_co2.yaml
@@ -7,7 +7,7 @@ esphome:
 
 interval:
   # Update Raw CO2
-  - interval: "${update_co2}"
+  - interval: "${update_button_co2}"
     then:
       - button.press: read_co2
 
